--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
+blinker==1.9.0
 certifi==2026.1.4
+click==8.3.1
+colorama==0.4.6
 dnspython==2.8.0
-gunicorn==23.0.0
-packaging==25.0
-pymongo==4.16.0
+Flask==3.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+numpy==2.4.0
+pandas==2.1.1
+pymongo==4.5.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2025.2
+six==1.17.0
+tzdata==2025.3
+Werkzeug==3.1.4
